--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <ul class="contact-list list">
         <li class="item-mail">
           <a href="mailto:info@devstudio.com" class="link">
-            <svg class="contact-item" width="16" height="10">
+            <svg class="contact-item" width="16" height="12">
               <use href="./images/sprite.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
         <li class="item">
           <a href="tel:+3809611111111" class="link">
-            <svg class="contact-item" width="16" height="12">
+            <svg class="contact-item" width="16" height="10">
               <use href="./images/sprite.svg#icon-smartphone"></use>
             </svg>
             +3809611111111
@@ -345,7 +345,7 @@
               <svg class="customers-svg" width="84.44" height="40.62">
                 <use href="./images/sprite.svg#icon-foster-peters"></use>
               </svg>
-            </a>
+            </a> 
           </li>
           <li class="list">
             <a href="#" class="link customer-item">
@@ -361,9 +361,6 @@
               </svg>
             </a>
           </li>
-
-
-
 
         </ul>
 
@@ -395,7 +392,7 @@
       </div>
 
       <div class="footer-social">
-        <h2 class="social-title">приєднуйтесь</h2>
+        <p class="social-title">приєднуйтесь</p>
         <ul class="lists-svg">
           <li class="list">
             <a href="#" class="link net-item">
